--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "burakkaya",
-  "homepage": "https://burakalemun.github.io/burakkaya.github.io/",
+  "homepage": "https://burakalemun.github.io/burakkaya/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
